--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -120,65 +120,8 @@
       align-items: center; }
 
 .card {
-  width: 100px;
-  display: inline-block;
-  border-radius: 3px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
-  overflow: hidden;
-  position: relative; }
-  .card .counter-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 12; }
-    .card .counter-container .counter {
-      background: rgba(34, 34, 34, 0.8);
-      border: 2px solid white;
-      color: white;
-      font-weight: 100 !important;
-      height: 60px;
-      width: 60px;
-      border-radius: 30px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 1.5em; }
-  .card .card-label {
-    font-size: 14px;
-    font-weight: 300;
-    padding: 8px;
-    color: #222;
-    background: rgba(255, 255, 255, 0.75); }
-    .card .card-label .name {
-      margin-bottom: 8px;
-      text-transform: uppercase; }
-    .card .card-label .description {
-      font-size: 0.85em; }
-  .card .card-footer {
-    background: rgba(255, 255, 255, 0.75);
-    height: 30px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center; }
-    .card .card-footer .gold {
-      height: 22px;
-      width: 22px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0 8px;
-      border-radius: 10px;
-      border: 1px solid #997733;
-      font-size: 12px;
-      font-weight: 100; }
-  .card img {
-    width: 100%;
-    position: relative;
-    z-index: 10; }
+  width: img;
+    width-width: 100%;
+    width-height: auto; }
 
 /*# sourceMappingURL=game.component.css.map */
