--- a/src-frontend/app/game/game.component.scss
+++ b/src-frontend/app/game/game.component.scss
@@ -218,84 +218,9 @@
 
 .card {
   width: 100px;
-  display: inline-block;
-  border-radius: 3px;
-  box-shadow: 0 1px 2px rgba(black, 0.12), 0 1px 3px rgba(black, 0.24);
-  //padding: 3px 3px 0px;
-  //background: black;
-  overflow: hidden;
-  position: relative;
-
-  .counter-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 12;
-
-    .counter {
-      background: rgba(#222, 0.8);
-      border: 2px solid white;
-      color: white;
-      font-weight: 100 !important;
-
-      height: 60px;
-      width: 60px;
-      border-radius: 30px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 1.5em;
-    }
-  }
-
-  .card-label {
-    font-size: 14px;
-    font-weight: 300;
-    padding: 8px;
-    color: #222;
-    background: rgba(white, 0.75);
-
-    .name {
-      margin-bottom: 8px;
-      text-transform: uppercase;
-    }
-
-    .description {
-      font-size: 0.85em;
-    }
-
-  }
-
-  .card-footer {
-    background: rgba(white, 0.75);
-    height: 30px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-
-    .gold {
-      height: 22px;
-      width: 22px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      margin: 0 8px;
-      border-radius: 10px;
-      border: 1px solid #997733;
-      font-size: 12px;
-      font-weight: 100;
-    }
-  }
 
   img {
     width: 100%;
-    position: relative;
-    z-index: 10;
+    height: auto;
   }
 }
