finished creation page, all that's left is to figure out what henry wants in terms of actually submitting. shouldn't be too bad, I have a javascript set of the desired cards that I can just join into a string and like put into a hidden form element or something before submitting. oh yeah, and also we need to figure out what we're doing in terms of the images for the cards.

--- a/src-frontend/app/creation-page/creation-page.component.css
+++ b/src-frontend/app/creation-page/creation-page.component.css
@@ -162,6 +162,18 @@ form {
   height: 70%;
 }
 
-#cards {
+#card-select-and-submit {
   margin-right: 10px;
+}
+
+.wide-button-container {
+  width: 100%;
+  background-color: darkred;
+  vertical-align: bottom;
+}
+
+.wide-button {
+  width: 100%;
+  height: 100%;
+  font-size: 5vmin;
 }
