--- a/src-frontend/app/game/card/card.component.html
+++ b/src-frontend/app/game/card/card.component.html
@@ -1,9 +1,11 @@
 <div class="card">
-  <img src="{{ imageSource() }}" *ngIf="card">
-  <div class="counter" *ngIf="count">12</div>
+  <img src="{{ imageSource() }}">
+  <div class="counter-container">
+    <div class="counter" *ngIf="count">12</div>
+  </div>
   <div class="card-label" *ngIf="card">
     <div class="name">{{ card.name }}</div>
-    <div class="description" [innerHTML]="card.description"></div>
+    <div class="description" [innerHtml]="card.text"></div>
   </div>
   <div class="card-footer" *ngIf="card">
     <div class="gold">2</div>
