--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -36,37 +36,44 @@
     <div id="right-bar-container">
       <div id="right-bar">
         <div class="turns">
-          <div class="turn">
+          <div *ngFor="let player of game.players" class="turn">
             <div class="current-turn-message">Current Turn</div>
             <div class="turn-info">
-              <div class="name">Ben</div>
+              <div class="name">{{player.name}}</div>
               <div class="num-cards">3 Cards</div>
             </div>
           </div>
-          <div class="turn">
-            <div class="current-turn-message">Current Turn</div>
-            <div class="turn-info">
-              <div class="name">Ben</div>
-              <div class="num-cards">3 Cards</div>
-            </div>
-          </div>
-          <div class="turn current-turn">
-            <div class="current-turn-message">Current Turn</div>
-            <div class="turn-info">
-              <div class="name">Ben</div>
-              <div class="num-cards">3 Cards</div>
-            </div>
-          </div>
-          <div class="turn">
-            <div class="current-turn-message">Current Turn</div>
-            <div class="turn-info">
-              <div class="name">Ben</div>
-              <div class="num-cards">3 Cards</div>
-            </div>
-          </div>
-          <div class="chat-container">
-            <dmn-chat></dmn-chat>
-          </div>
+          <!--<div class="turn">-->
+            <!--<div class="current-turn-message">Current Turn</div>-->
+            <!--<div class="turn-info">-->
+              <!--<div class="name">Ben</div>-->
+              <!--<div class="num-cards">3 Cards</div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="turn">-->
+            <!--<div class="current-turn-message">Current Turn</div>-->
+            <!--<div class="turn-info">-->
+              <!--<div class="name">Ben</div>-->
+              <!--<div class="num-cards">3 Cards</div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="turn current-turn">-->
+            <!--<div class="current-turn-message">Current Turn</div>-->
+            <!--<div class="turn-info">-->
+              <!--<div class="name">Ben</div>-->
+              <!--<div class="num-cards">3 Cards</div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="turn">-->
+            <!--<div class="current-turn-message">Current Turn</div>-->
+            <!--<div class="turn-info">-->
+              <!--<div class="name">Ben</div>-->
+              <!--<div class="num-cards">3 Cards</div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="chat-container">-->
+            <!--<dmn-chat></dmn-chat>-->
+          <!--</div>-->
         </div>
       </div>
     </div>
