--- a/src-frontend/app/game/card/card.component.css
+++ b/src-frontend/app/game/card/card.component.css
@@ -4,7 +4,8 @@
   border-radius: 3px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
   overflow: hidden;
-  position: relative; }
+  position: relative;
+  font-size: 0; }
   .card .counter-container {
     position: absolute;
     top: 0;
@@ -31,13 +32,16 @@
     font-size: 14px;
     font-weight: 300;
     padding: 8px;
+    padding-bottom: 0;
     color: #222;
     background: rgba(255, 255, 255, 0.75); }
     .card .card-label .name {
-      margin-bottom: 8px;
-      text-transform: uppercase; }
+      margin-bottom: 4px;
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: 0.8em; }
     .card .card-label .description {
-      font-size: 0.85em; }
+      font-size: 0.8em; }
   .card .card-footer {
     background: rgba(255, 255, 255, 0.75);
     height: 30px;
@@ -45,16 +49,16 @@
     justify-content: flex-end;
     align-items: center; }
     .card .card-footer .gold {
-      height: 22px;
-      width: 22px;
+      height: 18px;
+      width: 18px;
       display: flex;
       align-items: center;
       justify-content: center;
       margin: 0 8px;
-      border-radius: 10px;
+      border-radius: 9px;
       border: 1px solid #997733;
-      font-size: 12px;
-      font-weight: 100; }
+      font-size: 10px;
+      position: relative; }
   .card img {
     width: 100% !important;
     position: relative;
