--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -18,19 +18,16 @@
     <div id="piles">
 
       <div class="pile-row">
-        <div class="card" *ngFor="let card of game.nonactionCards">
-          <dmn-card [card]="card"></dmn-card>
-        </div>
+        <dmn-card [card]="card" *ngFor="let card of game.nonactionCards">
+        </dmn-card>
       </div>
       <div class="pile-row">
-        <div class="card" *ngFor="let card of game.actionCards.slice(0, 6)">
-          <dmn-card [card]="card"></dmn-card>
-        </div>
+        <dmn-card [card]="card" *ngFor="let card of game.actionCards.slice(0, 6)">
+        </dmn-card>
       </div>
       <div class="pile-row">
-        <div class="card" *ngFor="let card of game.actionCards.slice(6, 12)">
-          <dmn-card [card]="card"></dmn-card>
-        </div>
+        <dmn-card [card]="card" *ngFor="let card of game.actionCards.slice(6, 12)">
+        </dmn-card>
       </div>
     </div>
     <div id="right-bar-container">
