--- a/src-frontend/app/game/card/card.component.scss
+++ b/src-frontend/app/game/card/card.component.scss
@@ -8,6 +8,29 @@
   overflow: hidden;
   position: relative;
   font-size: 0;
+  background: rgba(white, 0.75);
+  transition: background 0.15s;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(white, 0.2);
+    z-index: 12;
+    opacity: 0;
+    transition: opacity 0.2s;
+  }
+
+  &:hover {
+    cursor: pointer;
+
+    &::after {
+      opacity: 1;
+    }
+  }
 
   .counter-container {
     position: absolute;
@@ -42,7 +65,6 @@
     padding: 8px;
     padding-bottom: 0;
     color: #222;
-    background: rgba(white, 0.75);
 
     .name {
       margin-bottom: 4px;
@@ -58,7 +80,6 @@
   }
 
   .card-footer {
-    background: rgba(white, 0.75);
     height: 30px;
     display: flex;
     justify-content: flex-end;
