--- a/src-frontend/app/game/card/card.component.css
+++ b/src-frontend/app/game/card/card.component.css
@@ -8,7 +8,12 @@
   font-size: 0;
   background: rgba(255, 255, 255, 0.75);
   background: #E9E5E0;
-  transition: background 0.15s, transform 0.15s; }
+  transition: background 0.15s, transform 0.15s;
+  user-select: none; }
+  .card .image {
+    height: 75px;
+    background-position: center center;
+    background-size: cover; }
   .card::after, .card::before {
     content: '';
     position: absolute;
@@ -16,7 +21,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.1);
     z-index: 12;
     opacity: 0;
     transition: opacity 0.2s; }
