--- a/src-frontend/app/game/card/card.component.scss
+++ b/src-frontend/app/game/card/card.component.scss
@@ -11,6 +11,13 @@
   background: rgba(white, 0.75);
   background: #E9E5E0;
   transition: background 0.15s, transform 0.15s;
+  user-select: none;
+
+  .image {
+    height: 75px;
+    background-position: center center;
+    background-size: cover;
+  }
 
   // After is hover filter
   // Before is selected filter
@@ -21,7 +28,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(white, 0.2);
+    background: rgba(white, 0.1);
     z-index: 12;
     opacity: 0;
     transition: opacity 0.2s;
