--- a/src-frontend/app/game/card/card.component.css
+++ b/src-frontend/app/game/card/card.component.css
@@ -59,12 +59,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 1.5em; }
+      font-size: 24px; }
   .card .card-label {
     font-size: 14px;
     font-weight: 300;
-    padding: 8px;
-    padding-bottom: 0;
+    padding: 8px 8px 0;
     color: #222; }
     .card .card-label .name {
       margin-bottom: 4px;
@@ -93,5 +92,8 @@
     width: 100% !important;
     position: relative;
     z-index: 10; }
+
+dmn-card {
+  position: relative; }
 
 /*# sourceMappingURL=card.component.css.map */
