--- a/src-frontend/app/game/card/card.component.html
+++ b/src-frontend/app/game/card/card.component.html
@@ -1,6 +1,7 @@
-<div class="card" (click)="select()" [ngClass]="{selected: selected}">
-
-
+<div class="card"
+     (click)="select()"
+     [ngClass]="{selected: selected}"
+>
   <img src="{{ imageSource() }}" *ngIf="hasCount()">
   <div class="counter-container" *ngIf="hasCount()">
     <div class="counter">{{count}}</div>
