--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -37,15 +37,20 @@
         border-bottom-right-radius: 8px; }
       #game #board #left-bar button {
         margin: 12px;
-        border: none;
-        min-width: 200px;
-        font-size: 1.2em;
+        min-width: 150px;
+        font-size: 1em;
         font-weight: 100;
         color: white;
-        background: rgba(70, 78, 164, 0.9);
+        background: rgba(0, 0, 0, 0.2);
+        border: 1px solid #DDD;
         height: 50px;
         line-height: 50px;
-        padding: 0; }
+        padding: 0;
+        font-family: 'Roboto', Helvetica, Arial, sans-serif;
+        letter-spacing: 1px;
+        transition: background 0.15s; }
+        #game #board #left-bar button:hover {
+          background: rgba(0, 0, 0, 0.4); }
     #game #board #piles {
       flex-grow: 1;
       padding: 30px;
@@ -85,7 +90,7 @@
                 text-transform: uppercase;
                 font-size: 0.9em;
                 margin-bottom: 12px; }
-            #game #board #right-bar-container #right-bar .turns .turn.currentturn .turn-info {
+            #game #board #right-bar-container #right-bar .turns .turn.currentTurn .turn-info {
               font-weight: 300; }
             #game #board #right-bar-container #right-bar .turns .turn .turn-info {
               display: flex;
@@ -95,22 +100,23 @@
     display: flex;
     align-items: stretch;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
-    background: rgba(255, 255, 255, 0.3); }
+    background: rgba(255, 255, 255, 0.3);
+    border-top: 1px solid #DDD; }
     #game #hud .card {
       font-size: 0; }
       #game #hud .card .counter {
-        font-size: 24px; }
+        font-size: 24px !important; }
     #game #hud .hand-container {
-      flex-grow: 7;
+      flex-grow: 1;
       display: flex;
       justify-content: center;
       align-items: center; }
       #game #hud .hand-container .hand {
         display: inline-block; }
         #game #hud .hand-container .hand .card {
-          margin: 0 12px; }
+          padding: 0 4px; }
     #game #hud .left, #game #hud .deck {
-      flex-grow: 1;
+      padding: 0 18px;
       display: flex;
       justify-content: center;
       align-items: center; }
