--- a/src-frontend/app/game/game.component.scss
+++ b/src-frontend/app/game/game.component.scss
@@ -4,21 +4,7 @@
   height: 100%;
   //background: url('../../assets/parchment-002.jpg') center center;
   background: url('../../assets/bg_blur.png') center center;
-
   background-size: cover;
-
-  //&::after {
-  //  content: '';
-  //  display: block;
-  //  position: absolute;
-  //  top: 0;
-  //  left: 0;
-  //  right: 0;
-  //  bottom: 0;
-  //  pointer-events: none;
-  //  background: rgba(0, 0, 0, 0.3);
-  //  z-index: 1;
-  //}
 
   #board {
     flex-grow: 1;
@@ -60,15 +46,22 @@
 
       button {
         margin: 12px;
-        border: none;
-        min-width: 200px;
-        font-size: 1.2em;
+        min-width: 150px;
+        font-size: 1em;
         font-weight: 100;
         color: white;
-        background: rgba(#464ea4, 0.9);
+        background: rgba(black, 0.2);
+        border: 1px solid #DDD;
         height: 50px;
         line-height: 50px;
         padding: 0;
+        font-family: 'Roboto', Helvetica, Arial, sans-serif;
+        letter-spacing: 1px;
+        transition: background 0.15s;
+
+        &:hover {
+          background: rgba(black, 0.4);
+        }
       }
     }
 
@@ -171,17 +164,18 @@
     align-items: stretch;
     box-shadow: 0 1px 2px rgba(black, 0.12), 0 1px 3px rgba(black, 0.24);
     background: rgba(white, 0.3);
+    border-top: 1px solid #DDD;
 
     .card {
       font-size: 0;
 
       .counter {
-        font-size: 24px;
+        font-size: 24px !important;
       }
     }
 
     .hand-container {
-      flex-grow: 7;
+      flex-grow: 1;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -190,12 +184,12 @@
         display: inline-block;
 
         .card {
-          margin: 0 12px;
+          padding: 0 4px;
         }
       }
     }
     .left, .deck {
-      flex-grow: 1;
+      padding: 0 18px;
       display: flex;
       justify-content: center;
       align-items: center;
