--- a/src-frontend/app/game/card/card.component.css
+++ b/src-frontend/app/game/card/card.component.css
@@ -1,5 +1,5 @@
 .card {
-  width: 100px;
+  width: 112px;
   display: inline-block;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
@@ -61,19 +61,20 @@
       align-items: center;
       font-size: 24px; }
   .card .card-label {
-    font-size: 14px;
+    font-size: 11px;
     font-weight: 300;
     padding: 8px 8px 0;
-    color: #222; }
+    color: #222;
+    height: 60px; }
     .card .card-label .name {
       margin-bottom: 4px;
       text-transform: uppercase;
       font-weight: bold;
-      font-size: 0.8em; }
+      font-size: 0.9em; }
     .card .card-label .description {
       font-size: 0.8em; }
   .card .card-footer {
-    height: 30px;
+    padding-bottom: 4px;
     display: flex;
     justify-content: flex-end;
     align-items: center; }
