--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -14,7 +14,7 @@
       </div>
       <div id="cart">
       </div>
-      <button>End Phase</button>
+      <button>End {{ game.phase }} Phase</button>
     </div>
     <div id="piles">
 
