--- a/src-frontend/app/game/card/card.component.html
+++ b/src-frontend/app/game/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="card"
      (click)="select()"
-     [ngClass]="{selected: selected}"
+     [ngClass]="{selected: selected, isCard: !!card}"
 >
   <img src="{{ imageSource() }}" *ngIf="hasCount()">
   <div class="counter-container" *ngIf="hasCount()">
