--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -1,4 +1,5 @@
 #game {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -38,7 +39,7 @@
       #game #board #left-bar button {
         margin: 12px;
         min-width: 150px;
-        font-size: 1em;
+        font-size: 0.9em;
         font-weight: 100;
         color: white;
         background: rgba(0, 0, 0, 0.2);
@@ -47,7 +48,6 @@
         line-height: 50px;
         padding: 0;
         font-family: 'Roboto', Helvetica, Arial, sans-serif;
-        letter-spacing: 1px;
         transition: background 0.15s; }
         #game #board #left-bar button:hover {
           background: rgba(0, 0, 0, 0.4); }
