--- a/src-frontend/app/game/game.component.scss
+++ b/src-frontend/app/game/game.component.scss
@@ -1,4 +1,5 @@
 #game {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -47,7 +48,7 @@
       button {
         margin: 12px;
         min-width: 150px;
-        font-size: 1em;
+        font-size: 0.9em;
         font-weight: 100;
         color: white;
         background: rgba(black, 0.2);
@@ -56,7 +57,6 @@
         line-height: 50px;
         padding: 0;
         font-family: 'Roboto', Helvetica, Arial, sans-serif;
-        letter-spacing: 1px;
         transition: background 0.15s;
 
         &:hover {
