--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -33,9 +33,19 @@
       #game #board #left-bar #cart {
         background: rgba(0, 0, 0, 0.5);
         flex-grow: 1;
-        margin-right: 60px;
+        margin-right: 50px;
         border-top-right-radius: 8px;
-        border-bottom-right-radius: 8px; }
+        border-bottom-right-radius: 8px;
+        height: 40px; }
+        #game #board #left-bar #cart .cart-inner {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          overflow: auto;
+          flex-direction: column;
+          padding-top: 12px;
+          align-items: center;
+          justify-content: flex-start; }
       #game #board #left-bar button {
         margin: 12px;
         min-width: 150px;
