--- a/src-frontend/app/game/game.component.scss
+++ b/src-frontend/app/game/game.component.scss
@@ -40,9 +40,21 @@
       #cart {
         background: rgba(black, 0.5);
         flex-grow: 1;
-        margin-right: 60px;
+        margin-right: 50px;
         border-top-right-radius: 8px;
         border-bottom-right-radius: 8px;
+        height: 40px;
+
+        .cart-inner {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          overflow: auto;
+          flex-direction: column;
+          padding-top: 12px;
+          align-items: center;
+          justify-content: flex-start;
+        }
       }
 
       button {
