Add chat back in

--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -58,9 +58,9 @@
               <div class="num-cards">3 Cards</div>
             </div>
           </div>
-          <!--<div class="chat-container">-->
-            <!--<dmn-chat></dmn-chat>-->
-          <!--</div>-->
+          <div class="chat-container">
+            <dmn-chat></dmn-chat>
+          </div>
         </div>
       </div>
     </div>
