--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -77,14 +77,14 @@
       width: 320px;
       padding: 12px; }
       #game #board #right-bar-container #right-bar {
-        background: white;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24); }
         #game #board #right-bar-container #right-bar .turns {
           display: flex;
           flex-direction: column; }
           #game #board #right-bar-container #right-bar .turns .turn {
             padding: 18px 14px;
-            border-bottom: 1px solid #DDD; }
+            border-bottom: 1px solid #DDD;
+            background: white; }
             #game #board #right-bar-container #right-bar .turns .turn .current-turn-message {
               display: none; }
             #game #board #right-bar-container #right-bar .turns .turn.currentTurn {
@@ -105,6 +105,12 @@
             #game #board #right-bar-container #right-bar .turns .turn .turn-info {
               display: flex;
               justify-content: space-between; }
+        #game #board #right-bar-container #right-bar .chat-container {
+          padding-top: 14px;
+          background: rgba(0, 0, 0, 0.5);
+          font-size: 0.8em;
+          color: white;
+          height: 220px; }
   #game #hud {
     height: 200px;
     display: flex;
