--- a/src-frontend/app/game/game.component.scss
+++ b/src-frontend/app/game/game.component.scss
@@ -116,7 +116,6 @@
       padding: 12px;
 
       #right-bar {
-        background: white;
         box-shadow: 0 1px 2px rgba(black, 0.12), 0 1px 3px rgba(black, 0.24);
 
         .turns {
@@ -126,6 +125,7 @@
           .turn {
             padding: 18px 14px;
             border-bottom: 1px solid #DDD;
+            background: white;
 
             .current-turn-message {
               display: none;
@@ -164,6 +164,11 @@
         }
 
         .chat-container {
+          padding-top: 14px;
+          background: rgba(black, 0.5);
+          font-size: 0.8em;
+          color: white;
+          height: 220px;
         }
       }
     }
