--- a/src-frontend/app/game/card/card.component.html
+++ b/src-frontend/app/game/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card"
+<div class="card {{ type() }}"
      (click)="select()"
      [ngClass]="{selected: selected, isCard: !!card}"
 >
